@@ -1,7 +1,7 @@
 innoextract 1.10-dev
 
 Known working Inno Setup versions:
-Inno Setup 1.2.10 to 6.2.2
+Inno Setup 1.2.10 to 6.3.3
 
 Bug tracker:
 https://innoextract.constexpr.org/issues
