@@ -32,6 +32,17 @@
 
 namespace setup {
 
+namespace {
+
+STORED_ENUM_MAP(stored_sign_mode, data_entry::NoSetting,
+	data_entry::NoSetting,
+	data_entry::Yes,
+	data_entry::Once,
+	data_entry::Check,
+);
+
+} // anonymous namespace
+
 void data_entry::load(std::istream & is, const info & i) {
 	
 	chunk.first_slice = util::load<boost::uint32_t>(is, i.version.bits());
@@ -149,13 +160,23 @@ void data_entry::load(std::istream & is, const info & i) {
 	if(i.version >= INNO_VERSION(5, 1, 13)) {
 		flagreader.add(SolidBreak);
 	}
-	if(i.version >= INNO_VERSION(5, 5, 7)) {
+	if(i.version >= INNO_VERSION(5, 5, 7) && i.version < INNO_VERSION(6, 3, 0)) {
 		// Actually added in Inno Setup 5.5.9 but the data version was not bumped
 		flagreader.add(Sign);
 		flagreader.add(SignOnce);
 	}
 	
 	options |= flagreader.finalize();
+	
+	if(i.version >= INNO_VERSION(6, 3, 0)) {
+		sign = stored_enum<stored_sign_mode>(is).get();
+	} else if(options & SignOnce) {
+		sign = Once;
+	} else if(options & Sign) {
+		sign = Yes;
+	} else {
+		sign = NoSetting;
+	}
 	
 	if(options & ChunkCompressed) {
 		chunk.compression = i.header.compression;
@@ -205,4 +226,11 @@ NAMES(setup::data_entry::flags, "File Location Option",
 	"sign",
 	"sign once",
 	"bzipped",
+)
+
+NAMES(setup::data_entry::sign_mode, "Sign Mode",
+	"no setting",
+	"yes",
+	"once",
+	"check",
 )
