@@ -106,6 +106,9 @@ void run_entry::load(std::istream & is, const info & i) {
 	if(i.version >= INNO_VERSION(6, 1, 0)) {
 		flagreader.add(DontLogParameters);
 	}
+	if(i.version >= INNO_VERSION(6, 3, 0)) {
+		flagreader.add(LogOutput);
+	}
 	
 	options = flagreader.finalize();
 }
@@ -124,6 +127,7 @@ NAMES(setup::run_entry::flags, "Run Option",
 	"64 bit",
 	"run as original user",
 	"don't log parameters",
+	"log output",
 )
 
 NAMES(setup::run_entry::wait_condition, "Run Wait Type",
